# SDF-CF

./: .gitignore  .gitmodules  README.md
tracking/: CMakeLists.txt  demo.cpp  install.sh
tracking/src/feature_extraction/: deep_feature_engine.cpp  deep_feature_engine.h
tracking/src/tracker/: tracker.c  tracker.h
training/: .gitignore  download_vot.sh  test_discriminative.py  test_smoothness.py  train.py
training/models/: MDNet.py  VGGM.py  fetch_baseline.sh  vgg_m_2048.py
training/scripts/: train.sh  update_imagenet.sh
training/utils/: .gitignore  VOTLoader.py  eco_eval.py  extract_imagenet.py  imagenet.py  imagenet_video.py  img_loader.py  logger.py  masked_smoothness_loss.py  smoothness_loss.py  timer.py  utils.py  vot.py
